// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should show error if result is null. 1`] = `
Array [
  Object {
    "payload": [Error: Error - Unable to retrieve all periods. There may be periods for which the employee is not valid.],
    "type": "CATCH_BUSINESS_ERROR",
  },
  Object {
    "payload": null,
    "type": "TIMESHEET-PC-IMPORTER/DAILY_RECORDS/SET_CONTRACTED_WORK_TIMES",
  },
]
`;

exports[`complete() should show error. 1`] = `
Array [
  Object {
    "payload": [Error: Error - Unable to retrieve all periods. There may be periods for which the employee is not valid.],
    "type": "CATCH_BUSINESS_ERROR",
  },
  Object {
    "payload": Array [
      Object {
        "records": Map {
          "1" => Object {
            "recordDate": "1",
          },
          "2" => Object {
            "recordDate": "1",
          },
        },
      },
    ],
    "type": "TIMESHEET-PC-IMPORTER/DAILY_RECORDS/SET_CONTRACTED_WORK_TIMES",
  },
]
`;

exports[`complete() should success. 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "records": Map {
          "1" => Object {
            "recordDate": "1",
          },
          "2" => Object {
            "recordDate": "2",
          },
        },
      },
    ],
    "type": "TIMESHEET-PC-IMPORTER/DAILY_RECORDS/SET_CONTRACTED_WORK_TIMES",
  },
]
`;

exports[`error() should do. 1`] = `
Array [
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
